# GKC

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  common.cmk  cpkg-import.cmk  cpkg-info.dev  cpkg-info.rt  ftsc.cmk  setup.txt
Client/GkcClient/: CMakeLists.txt
Client/GkcClient/include/: EntryPoint.h  PreComp.h
Client/GkcClient/src/: Main.cpp
Compiler/file2code/: CMakeLists.txt
Compiler/file2code/include/: EntryPoint.h  Global.h  PreComp.h
Compiler/file2code/include/cmd/: ProcessFile.h
Compiler/file2code/src/: Global.cpp  Main.cpp  PreComp.cpp
Compiler/wlc/: CMakeLists.txt
Compiler/wlc/data/: wlang.gra  wlang.lex
Compiler/wlc/include/: EntryPoint.h  Global.h  PreComp.h  entry_point.h  global.h  precomp.h
Compiler/wlc/include/analyzer/: SourceAnalyzer.h
Compiler/wlc/include/base/: CharStream.h  CharStreamProvider.h  LdfTable.h  LexerParser.h  SourceAnalyzer.h  _ldf_base.h  fsa.h  ldf_base.h  ldf_lex.h  ldf_regex.h  lexer.h  parser.h  pda.h  pool.h
Compiler/wlc/include/cmd/: CompileBase.h  CompileSingleFile.h  compile_single_file.h
Compiler/wlc/include/parser/: SourceAnalyzer.h
Compiler/wlc/src/: Global.cpp  Main.cpp  PreComp.cpp  global.cpp  main.cpp
RT/GkcCompiler/: CMakeLists.txt
RT/GkcCompiler/include/: PreComp.h  precomp.h
RT/GkcCompiler/include/action/: CommentStartAction.h  LineCommentStartAction.h  ReturnAction.h  SpaceAction.h
RT/GkcCompiler/include/analyzer/: BasicSymbolData.h  BasicSymbolData_Factory.h  CplMetaData.h  GrammarAnalyzer.h  GrammarTables.h  LexerAnalyzer.h  LexerTables.h
RT/GkcCompiler/include/base/: DataColl.h  Fsa.h  FsaTable.h  Grammar.cpp  Grammar.h  Lexer.cpp  Lexer.h  Pda.h  PdaTable.h
RT/GkcCompiler/include/ldf/: AnalyzeTables.h  Base.h  Def.cpp  Def.h  DoIdTokenMacroAction.h  GraAction.h  GraAnalyzer.h  GraDotAlg.h  LdfFsa.h  LdfGraPda.h  LexAction.h  LexAnalyzer.h  LexTables.h  MacroTokenAction.h  RegexAction.h  RegexAnalyzer.h  RegexCharAction.h  RegexCharSymbolData.h  RegexCharSymbolData_Factory.h  RegexDoCharAction.h  RegexDotAlg.h
RT/GkcCompiler/include/meta/: CplMetaData.h  CplMetaDataPositionSymbolData.h  CplMetaDataPositionSymbolData_Factory.h  MetaDef.h
RT/GkcCompiler/include/rdp/: RdDef.cpp  RdDef.h  RdParser.h  RdParserTables.h  RdScanner.h  RdScannerTables.h
RT/GkcCompiler/public/: _GkcCompiler.cpp  _GkcCompiler.h
RT/GkcCompiler/src/: Action.cpp  Analyzer.cpp  Main.cpp  PreComp.cpp  Public.cpp  Rdp.cpp  main.cpp  precomp.cpp
RT/GkcCompiler/src/action/: CommentStartAction.cpp  LineCommentStartAction.cpp  ReturnAction.cpp  SpaceAction.cpp
RT/GkcCompiler/src/analyzer/: BasicSymbolData.cpp  BasicSymbolData_Factory.cpp  GrammarAnalyzer.cpp  GrammarTables.cpp  LexerAnalyzer.cpp  LexerTables.cpp
RT/GkcCompiler/src/ldf/: DoIdTokenMacroAction.cpp  GraAction.cpp  GraAnalyzer.cpp  LdfFsa.cpp  LdfGraPda.cpp  LdfLexPda.cpp  LdfRegexFsa.cpp  LdfRegexPda.cpp  LexAction.cpp  LexAnalyzer.cpp  MacroTokenAction.cpp  RegexAction.cpp
RT/GkcCompiler/src/meta/: CplMetaData.cpp  CplMetaDataPositionSymbolData.cpp  CplMetaDataPositionSymbolData_Factory.cpp
RT/GkcCompiler/src/rdp/: RdParser.cpp  RdParserTables.cpp  RdScanner.cpp  RdScannerTables.cpp
RT/GkcHostSvc/: CMakeLists.txt
RT/GkcHostSvc/include/: main_loop.h  precomp.h
RT/GkcHostSvc/src/: PreComp.cpp  main.cpp
RT/GkcParser/: CMakeLists.txt
RT/GkcParser/data/: wlang.gra  wlang.lex
RT/GkcParser/include/: EntryPoint.h  PreComp.h
RT/GkcParser/include/base/: ParserDef.h
RT/GkcParser/include/wlang/: WlangAction.h  WlangGrammarError.h  WlangParser.h  WlangUtility.h
RT/GkcParser/include/wmark/: WmarkAction.h  WmarkParser.h  WmarkUtility.h
RT/GkcParser/include/won/: WonAction.h  WonParser.h  WonUtility.h
RT/GkcParser/public/: _GkcParser.cpp  _GkcParser.h
RT/GkcParser/src/: Main.cpp  Parser.cpp  Public.cpp
RT/GkcParser/src/wlang/: WlangAction.cpp  WlangParser.cpp  WlangUtility.cpp
RT/GkcParser/src/wmark/: WmarkAction.cpp  WmarkParser.cpp  WmarkUtility.cpp
RT/GkcParser/src/won/: WonParser.cpp  WonUtility.cpp
RT/GkcScheduleSvc/: CMakeLists.txt
RT/GkcScheduleSvc/include/: main_loop.h  precomp.h
RT/GkcScheduleSvc/src/: precomp.cpp
RT/GkcSys/: CMakeLists.txt
RT/GkcSys/include/: ComSACache.h  EntryPoint.h  Globals.h  HelpAuthoring.h  PreComp.h  SysDef.h  entry_point.h  gkc_sys.h  globals.h  precomp.h
RT/GkcSys/include/compress/: PkzCompressor.h  PkzDecompressor.h  _PkCompress.h
RT/GkcSys/include/stream/: BufferStream.h  FileStream.h  MemoryStream.h  MemoryStreamU.h  TextStream.h  TextStreamU.h  _MemStream.h  _TxtStream.h
RT/GkcSys/public/: _GkcSys.cpp  _GkcSys.h  _LiteCom.h  gkc_sys.h
RT/GkcSys/src/: ComClient.cpp  Compression.cpp  Globals.cpp  HelpAuthoring.cpp  LiteCom.cpp  Logger.cpp  Main.cpp  MemMgr.cpp  Public.cpp  SobPool.cpp  Stream.cpp  globals.cpp  main.cpp  mem_mgr.cpp  sob_pool.cpp  spb_pool.cpp
RT/GkcSys/src/compress/: PkzCompressor.cpp  PkzDecompressor.cpp  _PkCompress.cpp
RT/GkcSys/src/stream/: BufferStream.cpp  FileStream.cpp  MemoryStream.cpp  MemoryStreamU.cpp  TextStream.cpp  TextStreamU.cpp  (+1 more)
Service/GkcHostSvc/: CMakeLists.txt
Service/GkcHostSvc/include/: MainLoop.h
references/RT/GkcSys/: CMakeLists.txt
test/: CMakeLists.txt
test/BasicTest/: CMakeLists.txt
test/BasicTest/include/: EntryPoint.h  PreComp.h  entry_point.h  precomp.h
test/BasicTest/src/: Main.cpp  PkzTest.cpp  ShareTest.cpp  StreamTest.cpp  main.cpp  precomp.cpp
tools/: CMakeLists.txt
tools/fcmp/: CMakeLists.txt
tools/fcmp/include/: EntryPoint.h  Global.h  PreComp.h
tools/fcmp/src/: Global.cpp  Main.cpp  PreComp.cpp
tools/mdc/: CMakeLists.txt
tools/mdc/include/: EntryPoint.h  Global.h  PreComp.h  ProcessFiles.h  entry_point.h  precomp.h  process.h
tools/mdc/src/: Global.cpp  Main.cpp  PreComp.cpp  Public.cpp  global.cpp  main.cpp  precomp.cpp
tools/mdp/: CMakeLists.txt
tools/mdp/include/: EntryPoint.h  Global.h  PreComp.h
tools/mdp/src/: Global.cpp  Main.cpp  Public.cpp
tools/txtf/: CMakeLists.txt
tools/txtf/include/: EntryPoint.h  Global.h  PreComp.h
tools/txtf/src/: Global.cpp  Main.cpp
(+477 files in other folders)
